Tested transition between States